# notepad

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
notepad_app/: __init__.py  models.py  routes.py
notepad_app/static/: style.css
notepad_app/templates/: base.html  create_note.html  index.html  search_notes.html  view_note.html
