[project]
name = "notepad"
version = "0.1.0"
description = "Flask notebook app with sqlite and sqlalchemy backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "sqlalchemy",
    "flask",
    "flask_sqlalchemy",
    "humanize",
    "datetime",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
